--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -1,23 +1,27 @@
-<div class="container">
-    <div class="content">
-        <div fxLayout="row wrap" fxLayoutGap="35px grid">
-          <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let assignment of assignments; let index=index">
-            <mat-card class="mat-elevation-z4" >
-              <mat-card-header>
-                <mat-card-title>#{{index+1}} {{assignment.name}}</mat-card-title>
-                <mat-icon *ngIf="assignment.returned" color="primary">check</mat-icon>
-                <mat-icon *ngIf="!assignment.returned && assignment.dueDate < currentDate" color="warn">warning</mat-icon>
-              </mat-card-header>  
-              <mat-card-subtitle> {{assignment.dueDate.getDate()}} {{months[assignment.dueDate.getMonth()]}} {{assignment.dueDate.getFullYear()}}</mat-card-subtitle>
-              <mat-card-content>
-                <p>{{assignment.descriptions}}</p>
-              </mat-card-content>
-              <mat-card-actions>
-                <button mat-button>Details</button>
-                <button mat-button>Remove</button>
-              </mat-card-actions>
-            </mat-card>
-          </div>
-        </div>
-        </div>
+
+<app-add-assignment *ngIf="formVisible" (addAssignment)="onAddAssignment($event)">
+</app-add-assignment>
+<div class="container" *ngIf="!formVisible">
+  <button mat-flat-button color="primary" style="margin-bottom:15px" (click)="onAddAssignmentBtn()">Add assignment</button>
+  <div fxLayout="row wrap" fxLayoutGap="35px grid">
+    <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%"
+      *ngFor="let assignment of assignments; let index=index">
+      <mat-card class="mat-elevation-z4">
+        <mat-card-header>
+          <mat-card-title><b>#{{index+1}}</b> {{assignment.name}}</mat-card-title>
+          <mat-icon *ngIf="assignment.returned" color="primary">check</mat-icon>
+          <mat-icon *ngIf="!assignment.returned && assignment.dueDate < currentDate" color="warn">warning</mat-icon>
+        </mat-card-header>
+        <mat-card-subtitle> {{assignment.dueDate.getDate()}} {{months[assignment.dueDate.getMonth()]}}
+          {{assignment.dueDate.getFullYear()}}</mat-card-subtitle>
+        <mat-card-content *ngIf="assignment.description">
+          <app-assignment-detail [description]="assignment.description"></app-assignment-detail>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button [disabled]="assignment.returned" (click)="returnAssignment(assignment)">Mark as done</button>
+          <button mat-button (click)="onRemove(assignment)">Remove</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
 </div>
