--- a/src/app/add-assignment/add-assignment.component.html
+++ b/src/app/add-assignment/add-assignment.component.html
@@ -7,7 +7,7 @@
         <mat-label>Description of assignment</mat-label>
         <input matInput placeholder="Description of assignment" [(ngModel)]="description" name="description">
       </mat-form-field>
-    <mat-form-field appearance="fill">
+    <mat-form-field>
       <mat-label>Choose a date</mat-label>
       <input matInput [matDatepicker]="picker" [(ngModel)]="dueDate" name="dueDate">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
