--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
-<mat-toolbar color="primary">
-  List of assignments
+
+<nav>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span>{{title}}</span>
+    </mat-toolbar-row>
+    <mat-toolbar-row>
+      <a routerLink="/home" style="text-decoration: none; color: white">List of assignments</a>
+      <span class="spacer"></span>
+      <mat-icon class="icon" aria-hidden="false">verified_user</mat-icon>
+    </mat-toolbar-row>
+  
 </mat-toolbar>
-<br>
-<app-assignments></app-assignments>
+</nav>
+<router-outlet></router-outlet>
