--- a/src/app/add-assignment/add-assignment.component.html
+++ b/src/app/add-assignment/add-assignment.component.html
@@ -1,4 +1,10 @@
-<form ngForm #assignmentForm class="form">
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <a routerLink="/home" style="text-decoration: none; color: white">{{title}}</a>
+    <span class="spacer"></span>
+    <mat-icon class="icon" aria-hidden="false">verified_user</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar><form ngForm #assignmentForm class="form">
     <mat-form-field>
       <mat-label>Name of assignment</mat-label>
       <input matInput placeholder="Name of assignment" [(ngModel)]="name" name="name">
@@ -12,7 +18,6 @@
       <input matInput [matDatepicker]="picker" [(ngModel)]="dueDate" name="dueDate">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
-
     </mat-form-field>
     <button mat-stroked-button color="primary" (click)="onSubmit($event)">
       Add an assignment
