--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,9 @@
-
 <nav>
-  <mat-toolbar color="primary">
+  <mat-toolbar color="accent">
     <mat-toolbar-row>
       <span>{{title}}</span>
     </mat-toolbar-row>
-    <mat-toolbar-row>
-      <a routerLink="/home" style="text-decoration: none; color: white">List of assignments</a>
-      <span class="spacer"></span>
-      <mat-icon class="icon" aria-hidden="false">verified_user</mat-icon>
-    </mat-toolbar-row>
-  
 </mat-toolbar>
 </nav>
 <router-outlet></router-outlet>
+<mat-slide-toggle color="primary" (click)="onLogIn()">Log in</mat-slide-toggle>
