--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -1,10 +1,15 @@
-
-
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <a routerLink="/home" style="text-decoration: none; color: white">{{title}}</a>
+    <span class="spacer"></span>
+    <mat-icon class="icon" aria-hidden="false">verified_user</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
 <div class="container">
   <a routerLink="/add">
     <button mat-flat-button color="primary" style="margin-bottom:15px">Add assignment</button>
   </a>
-  
+
   <div fxLayout="row wrap" fxLayoutGap="35px grid">
     <div [fxFlex]="(100/gridColumns) + '%'" fxFlex.xs="100%" fxFlex.sm="33%"
       *ngFor="let assignment of assignments; let index=index">
@@ -21,10 +26,11 @@
         </mat-card-content>
 
         <mat-card-actions>
-          
-          <button mat-button [disabled]="assignment.returned" (click)="returnAssignment(assignment)">Mark as done</button>
-          <button mat-button (click)="onEdit(assignment)">Edit</button>
-          <button mat-button (click)="onRemove(assignment)">Remove</button>
+
+          <button mat-button [disabled]="assignment.returned" (click)="returnAssignment(assignment)">Mark as
+            done</button>
+          <button mat-button (click)="onEdit(assignment)" [disabled]="!isAdmin()">Edit</button>
+          <button mat-button (click)="onRemove(assignment)" [disabled]="!isAdmin()">Remove</button>
         </mat-card-actions>
       </mat-card>
     </div>
