--- a/src/app/edit-assignment/edit-assignment.component.html
+++ b/src/app/edit-assignment/edit-assignment.component.html
@@ -1,3 +1,10 @@
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <a routerLink="/home" style="text-decoration: none; color: white">{{title}}</a>
+      <span class="spacer"></span>
+      <mat-icon class="icon" aria-hidden="false">verified_user</mat-icon>
+    </mat-toolbar-row>
+</mat-toolbar>
 <div class="container" *ngIf="assignment">
     <h1>Edition de l'assignment {{assignment.name}}</h1>
     <form ngForm class="form">
