update description input and view to support html tags

--- a/src/app/add-assignment/add-assignment.component.html
+++ b/src/app/add-assignment/add-assignment.component.html
@@ -11,7 +11,7 @@
     </mat-form-field>
     <mat-form-field>
         <mat-label>Description of assignment</mat-label>
-        <input matInput placeholder="Description of assignment" [(ngModel)]="description" name="description">
+        <textarea rows="9" matInput placeholder="Description of assignment" [(ngModel)]="description" name="description"></textarea>
       </mat-form-field>
     <mat-form-field>
       <mat-label>Choose a date</mat-label>
