--- a/src/app/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignment-detail/assignment-detail.component.html
@@ -5,5 +5,5 @@
       {{panelOpenState ? 'hide description' : 'view description'}}
     </mat-panel-title>
   </mat-expansion-panel-header>
-  <p>{{description}}</p>
+  <div [innerHTML]="description"></div>
 </mat-expansion-panel>
