--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -15,9 +15,9 @@
       *ngFor="let assignment of assignments; let index=index">
       <mat-card class="mat-elevation-z4">
         <mat-card-header>
-          <mat-card-title><b>#{{index+1}}</b> {{assignment.name}}</mat-card-title>
+          <mat-card-title [ngStyle]="{'color': isExpired(assignment)?'#f44336':'black'}"><b>#{{index+1}}</b> {{assignment.name}}</mat-card-title>
           <mat-icon *ngIf="assignment.returned" color="primary">check</mat-icon>
-          <mat-icon *ngIf="!assignment.returned && assignment.dueDate < currentDate" color="warn">warning</mat-icon>
+          <mat-icon *ngIf="isExpired(assignment)" color="warn">warning</mat-icon>
         </mat-card-header>
         <mat-card-subtitle> {{assignment.dueDate | date}}
          </mat-card-subtitle>
@@ -27,10 +27,10 @@
 
         <mat-card-actions>
 
-          <button mat-button [disabled]="assignment.returned" (click)="returnAssignment(assignment)">Mark as
+          <button mat-button [disabled]="assignment.returned || isExpired(assignment)" (click)="returnAssignment(assignment)">Mark as
             done</button>
-          <button mat-button (click)="onEdit(assignment)" [disabled]="!isAdmin()">Edit</button>
-          <button mat-button (click)="onRemove(assignment)" [disabled]="!isAdmin()">Remove</button>
+          <button mat-button (click)="onEdit(assignment)" [disabled]="!isAdmin()" color="primary">Edit</button>
+          <button mat-button (click)="onRemove(assignment)" [disabled]="!isAdmin()" color="warn">Remove</button>
         </mat-card-actions>
       </mat-card>
     </div>
